Fix double scrolling issue and edit testimonial styling.

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
     --purple: #5E17EB;
     --light-purple: #bba6e8;
     --light-blue: #B1C5EC;
+    --light-grey: #f3f3f3;
     --grey: #737D91;
     --black: #2c2c2c;
 }
